--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,13 @@
     <title>Cynthia Brito-Mena Portfolio</title>
   </head>
   <body>
-    <noscript></noscript>
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+(function(){
+  emailjs.init("SOHHSkox26k5lJgwp"); 
+})();
+</script>
     <div id="app"></div>
   </body>
 </html>
