modified navbar toggle

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
   emailjs.init("SOHHSkox26k5lJgwp"); 
 })();
 </script>
+<script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+
     <div id="app"></div>
   </body>
 </html>
