modified text of terymnal

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <link rel="stylesheet" href="termynal.css">
     <title>Cynthia Brito-Mena Portfolio</title>
   </head>
   <body>
@@ -23,6 +23,7 @@
   emailjs.init("SOHHSkox26k5lJgwp"); 
 })();
 </script>
+<script src="termynal.js" data-termynal-container="#termynal"></script>
 
     <div id="app"></div>
   </body>
